# sorted-array

./: Cargo.toml  LICENSE.md  README.md  aliases.js  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
examples/: simple.rs
implementors/core/borrow/: trait.Borrow.js  trait.BorrowMut.js
implementors/core/clone/: trait.Clone.js
implementors/core/convert/: trait.AsMut.js  trait.AsRef.js
implementors/core/default/: trait.Default.js
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  (+3 more)
implementors/sorted_array/: trait.Comparator.js
sorted_array/: all.html  fn.sort_boxed_slice.html  fn.sort_mut_slice.html  fn.sort_mut_slice_unstable.html  fn.sort_vec.html  index.html  sidebar-items.js  struct.OrdComparator.html  struct.SortedSlice.html  struct.SortedVec.html  trait.Comparator.html  trait.WeakBorrow.html
sorted_array/comparator/: struct.OrdComparator.html  trait.Comparator.html
sorted_array/prelude/: index.html  sidebar-items.js  struct.SortedSlice.html  struct.SortedVec.html
sorted_array/sorted_slice/: fn.sort_boxed_slice.html  fn.sort_mut_slice.html  fn.sort_mut_slice_unstable.html  struct.SortedSlice.html
sorted_array/sorted_vec/: fn.sort_vec.html  struct.SortedVec.html
sorted_array/weak_borrow/: trait.WeakBorrow.html
src/: comparator.rs  lib.rs  macros.rs  sorted.rs  sorted_array.rs  sorted_slice.rs  sorted_vec.rs  test.rs  utils.rs  weak_borrow.rs
src/sorted_array/: comparator.rs.html  lib.rs.html  sorted_slice.rs.html  sorted_vec.rs.html  utils.rs.html  weak_borrow.rs.html
(+7 files in other folders)
