[package]
name = "sorted-array"
version = "0.2.0-alpha"
edition = "2018"
description = "A wrapper around sorted arrays"
authors = ["Fredrik Østrem <frx.apps@gmail.com>"]
repository = "https://github.com/frxstrem/sorted-array"
license = "MIT"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dependencies]
