[package]
authors = ["Fredrik Østrem <frx.apps@gmail.com>"]
description = "A wrapper around sorted arrays"
edition = "2021"
license = "MIT"
name = "sorted-array"
publish = false
readme = "README.md"
repository = "https://github.com/frxstrem/sorted-array"
version = "0.2.0-alpha.1"

[features]
alloc = []
default = ["std"]
std = ["alloc"]

[dependencies]
